@@ -19,6 +19,7 @@ PINCodeViewControllerDelegate
 >
 
 @property (strong, nonatomic) UIWindow *window;
+@property (assign, nonatomic) NSInteger passcodeAttempts;
 
 // access core data stores
 + (NSManagedObjectContext *)managedObjectContext;
